# vehicle2

./: pyproject.toml
app_name/api/: main.py
app_name/api/core/: config.py  events.py
app_name/api/core/settings/: app.py  development.py  production.py  test.py
app_name/api/middleware/: __init__.py  error.py  validation.py
app_name/api/v1/controllers/: __init__.py  authetication_controller.py
app_name/app/: dependencies.py
tests/: conftest.py
tests/e2e/: test_query.py
tests/integration/: test_orm_mapping.py  test_repo.py
vehicle/core/app/abstraction/: command.py  handler.py  repository.py
vehicle/core/app/queries/: vehicle_query.py
vehicle/core/app/services/: vehicle_service.py
vehicle/core/app/services/vehicle/: create_vehicle.py
vehicle/core/app/vehicle/create/: create_vehicle.py  create_vehicle_command.py
vehicle/core/app/vehicle/list/: list_vehicle.py  list_vehicle_command.py
vehicle/core/configuration/: events.py
vehicle/core/configuration/logging/: __init__.py
vehicle/core/configuration/settings/: app.py  test.py
vehicle/core/domain/entities/: base.py  vehicle.py
vehicle/core/domain/repositories/: vehicle_repository.py
vehicle/core/domain/shared/: domain_event.py  entity.py  error.py  result.py  unpack_error.py  value_object.py
vehicle/core/domain/valueobjects/: base.py  uuid_id.py
vehicle/core/domain/vehicle/: query_repository.py  uuid_error.py  uuid_id.py  vehicle.py  vehicle_repository.py
