[tool.poetry]
name = "vehicle"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
result = "^0.16.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
sqlalchemy = "^2.0.27"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.0"
coverage = "^7.4.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
